--- a/dtp/gradle/libs.versions.toml
+++ b/dtp/gradle/libs.versions.toml
@@ -2,7 +2,10 @@
 agp = "8.6.0"
 amplituda = "2.2.2"
 androidGifDrawable = "1.2.29"
+commonsMath3 = "3.6.1"
 glide = "4.16.0"
+jlargearrays = "1.6"
+jtransforms = "3.1"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -27,7 +30,10 @@ androidx-navigation-compose = { module = "androidx.navigation:navigation-compose
 androidx-navigation-dynamic-features-fragment = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigationCompose" }
 androidx-navigation-fragment = { module = "androidx.navigation:navigation-fragment", version.ref = "navigationCompose" }
 androidx-navigation-ui = { module = "androidx.navigation:navigation-ui", version.ref = "navigationCompose" }
+commons-math3 = { module = "org.apache.commons:commons-math3", version.ref = "commonsMath3" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+jlargearrays = { module = "pl.edu.icm:JLargeArrays", version.ref = "jlargearrays" }
+jtransforms = { module = "com.github.wendykierp:JTransforms", version.ref = "jtransforms" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
